# dotpal-ctf

./: .gitignore  Cargo.toml  README.md  chain_spec.json
pallets/ctf/: Cargo.toml
pallets/ctf/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  check_nonce.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs  xcm_config.rs
scripts/: ctf-interaction.ts  generate-pow.ts  package.json  tsconfig.json
