[package]
name = "pallet-ctf"
description = "Capture-the-Flag pallet for the Polkadot SDK"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame = { workspace = true, features = ["experimental", "runtime"], default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
log = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "sp-io/std",
]
runtime-benchmarks = ["frame/runtime-benchmarks"]
try-runtime = ["frame/try-runtime"]